TINY-14075: prevent `chat-history-list__item-content-title` text to overflow

--- a/modules/oxide/src/less/theme/components/ai-chat/ai-chat.less
+++ b/modules/oxide/src/less/theme/components/ai-chat/ai-chat.less
@@ -505,6 +505,7 @@
     display: flex;
     flex-direction: column;
     margin-right: auto;
+    overflow: hidden;
   }
 
   .tox-ai-chat-history-list__item-actions {
@@ -517,6 +518,8 @@
     font-size: var(--tox-private-font-size-base, @font-size-base);
     font-weight: var(--tox-private-font-weight-bold, @font-weight-bold);
     line-height: var(--tox-private-font-size-lg, @font-size-lg);
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .tox-ai-chat-history-list__item-content-date {
